--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /path/of/my/local/filesystem:/path/to/mount/into/containers/filesystem
+      - "./html/:/var/www/html/"
   devmysql:
     build:
       context: ./
@@ -20,4 +20,4 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD : 'yes'
     restart: always
     volumes:
-      - /database/path/of/my/local/filesystem:/database/path/to/mount/into/containers/filesystem
+      - mysql-data:/var/lib/mysql
